// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Micro Bar Chart Check onClick events 1`] = `
<DocumentFragment>
  <div
    class="ChartContainer-container"
  >
    <div
      class="recharts-responsive-container"
      style="width: 400px; height: 400px;"
    >
      <div
        class="MicroBarChart-container"
        height="400"
        width="400"
      >
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="January"
            >
              January
            </span>
            <span
              class="MicroBarChart-text"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 10%;"
            />
          </div>
        </div>
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="February"
            >
              February
            </span>
            <span
              class="MicroBarChart-text"
              title="100"
            >
              100
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 100%;"
            />
          </div>
        </div>
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="March"
            >
              March
            </span>
            <span
              class="MicroBarChart-text"
              title="70"
            >
              70
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 70%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Micro Bar Chart Loading placeholder 1`] = `
<DocumentFragment>
  <div
    class="ChartContainer-container"
  >
    <svg
      aria-labelledby="TITLE_ARIA_ID"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      role="img"
      viewBox="0 0 165 145"
      width="100%"
    >
      <title
        id="TITLE_ARIA_ID"
      >
        Loading...
      </title>
      <rect
        clip-path="STYLE-URL"
        height="100%"
        role="presentation"
        style="fill: STYLE-URL;"
        width="100%"
        x="0"
        y="0"
      />
      <defs>
        <clippath
          id="DIFF_ID"
        >
          <rect
            height="135"
            width="1"
            x="20"
            y="10"
          />
          <rect
            height="15"
            width="85"
            x="20"
            y="20"
          />
          <rect
            height="15"
            width="117"
            x="20"
            y="40"
          />
          <rect
            height="15"
            width="67"
            x="20"
            y="60"
          />
          <rect
            height="15"
            width="75"
            x="20"
            y="80"
          />
          <rect
            height="15"
            width="125"
            x="20"
            y="100"
          />
          <rect
            height="15"
            width="60"
            x="20"
            y="120"
          />
        </clippath>
        <lineargradient
          id="DIFF_ID"
        >
          <stop
            offset="0%"
            stop-color="var(--sapContent_ImagePlaceholderBackground)"
            stop-opacity="var(--sapContent_DisabledOpacity)"
          >
            <animate
              attributeName="offset"
              dur="2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="var(--sapContent_ImagePlaceholderForegroundColor)"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="var(--sapContent_ImagePlaceholderBackground)"
            stop-opacity="var(--sapContent_DisabledOpacity)"
          >
            <animate
              attributeName="offset"
              dur="2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Micro Bar Chart Render chart with data 1`] = `
<DocumentFragment>
  <div
    class="ChartContainer-container"
  >
    <div
      class="recharts-responsive-container"
      style="width: 400px; height: 400px;"
    >
      <div
        class="MicroBarChart-container"
        height="400"
        width="400"
      >
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="January"
            >
              January
            </span>
            <span
              class="MicroBarChart-text"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 10%;"
            />
          </div>
        </div>
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="February"
            >
              February
            </span>
            <span
              class="MicroBarChart-text"
              title="100"
            >
              100
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 100%;"
            />
          </div>
        </div>
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="March"
            >
              March
            </span>
            <span
              class="MicroBarChart-text"
              title="70"
            >
              70
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 70%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Micro Bar Chart Render with default Props 1`] = `
<DocumentFragment>
  <div
    class="ChartContainer-container"
  >
    <div
      class="recharts-responsive-container"
      style="width: 400px; height: 400px;"
    >
      <div
        class="MicroBarChart-container"
        height="400"
        width="400"
      >
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="January"
            >
              January
            </span>
            <span
              class="MicroBarChart-text"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 10%;"
            />
          </div>
        </div>
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="February"
            >
              February
            </span>
            <span
              class="MicroBarChart-text"
              title="100"
            >
              100
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 100%;"
            />
          </div>
        </div>
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="March"
            >
              March
            </span>
            <span
              class="MicroBarChart-text"
              title="70"
            >
              70
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 70%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Micro Bar Chart With custom colors 1`] = `
<DocumentFragment>
  <div
    class="ChartContainer-container"
  >
    <div
      class="recharts-responsive-container"
      style="width: 400px; height: 400px;"
    >
      <div
        class="MicroBarChart-container"
        height="400"
        width="400"
      >
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="January - formatted"
            >
              January - formatted
            </span>
            <span
              class="MicroBarChart-text"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 10%; background-color: black;"
            />
          </div>
        </div>
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="February - formatted"
            >
              February - formatted
            </span>
            <span
              class="MicroBarChart-text"
              title="100"
            >
              100
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 100%; background-color: yellow;"
            />
          </div>
        </div>
        <div
          class="MicroBarChart-barContainer"
        >
          <div
            class="MicroBarChart-labelContainer"
          >
            <span
              class="MicroBarChart-label"
              title="March - formatted"
            >
              March - formatted
            </span>
            <span
              class="MicroBarChart-text"
              title="70"
            >
              70
            </span>
          </div>
          <div
            class="MicroBarChart-valueContainer"
            style="opacity: 1; height: 4px;"
          >
            <div
              class="MicroBarChart-valueBar"
              style="width: 70%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
